--- a/spacemacs.org
+++ b/spacemacs.org
@@ -21,7 +21,9 @@ unsure, you should try in setting them in `dotspacemacs/user-config' first.
 
 ** Theme
 #+BEGIN_SRC emacs-lisp :tangle user-init.el
-  (setq-default dotspacemacs-themes '(doom-monokai-pro
+  (setq-default dotspacemacs-themes '(
+                                      doom-monokai-pro
+                                      spacemacs-dark
                                       doom-one
                                       doom-zenburn))
 #+END_SRC
